Criação e ajustes iniciais da pag.inicial

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
+
 </head>
 
 <body>
@@ -42,9 +43,49 @@
 
     <!-- Conteúdo principal da página -->
     <main>
-        <section class="container1">
-           <div class="imagem-left">
-                <img class="imagem-left" src="assents/will-site-removebg-preview.png">
+        <section class="container-main">
+            <div class="imagem-will">
+                <img class="imagem-will" src="assents/will-index.png">
+            </div>
+            <div class="imagem-chris">
+                <img class="imagem-chris" src="assents/chris-index.png">
+            </div>
+            <div class="introducao">
+                <h4 class="titulo-introducao">Um maluco no pedaco<br>‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ x<br>Todo mundo
+                    odeia o Chris</h4>
+                <p>
+                    The Fresh Prince of Bel-Air e Everybody Hates Chris são duas séries americanas
+                    que rapidamente se popularizaram não somente nos Estadudos Unidos, como também mundialmente.<br><br>
+                    Mesmo sendo retradas em decadas diferentes (uma nos anos 90 e outra nos anos 2000), ambas conseguem
+                    se aproximar do público e cativá-lo de maneira similiar, gerando muitas vezes uma identificação dos
+                    mesmo com os personagens apresentados (principalmente com os protagonistas).
+                    <br><br>
+                    A qualidade e a personalidade demonstrada em The Fresh Prince of Bel-Air e em Everybody Hates Chris
+                    foi tão marcante que resultou às séries diversos pémios como o Young Artist Awards e Imagine Award
+                    (faturadas por The Fresh Prince of Bel-Air) e as indicações ao Globo de Ouro e ao Emmy Awards em 3
+                    categorias diferentes (feito alcaçado por e Everybody Hates Chris).
+                </p>
+            </div>
+        </section>
+        <section container-brasil>
+            <div>
+                <!-- <img src="assents/Pelé-and-Will-index.png"> -->
+            </div>
+            <div class="resumo-brasil">
+                <h4 class="titulo-resumo">No Brasil</h4>
+                <p>
+                    No Brasil, ambas as séries marcarão gerações, e continuam marcando até hoje e tamanha aceitação se
+                    deve principalmente por um fator comum que ambas possuem: A IDENTIFICAÇÃO.<br><br>
+                    Os protagonistas Will e Chris demonstram um estilo de vida não muito diferente da grande maioria dos
+                    brasileiros (principalmente os que residem nas periferias), no desenrolar do episódios vemos as as
+                    tramas vividas pelos personagens, as brigas, as decepções, as dificuldades enfretadas em meio a
+                    sociedade e a essencia que de ambos que nunca muda e é ai que se encontra o fator comum que gera a
+                    identificação dos brasileiros.<br><br>
+                    Apesar de sofrerem diversas formas de opressão, discriminação, preconceito, e diversas outras
+                    adversidades, Chris e Will nunca deixam de manter o bom-humor, mesmo abaados continuam com um
+                    sorriso no rosto e se negam a desistir, se negam a deixar de sorrir e essa é sem dúvidas a
+                    caracteristica do verdadeiro brasileiro, que apesar de tudo sempre leva "a vida no sorriso".
+                </p>
             </div>
         </section>
     </main>
