Estilização Index finalizada

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -31,46 +31,92 @@
 
                 </div>
             </a>
-
-            <ul class="menu">
-                <li><a href="">Conheça o Will</a></li>
-                <li><a href="">Conheça o Chris</a></li>
-                <li><a href="">Cadastro</a></li>
-                <li><a href="">Login</a></li>
-            </ul>
+            <nav class="menu">
+                <ul>
+                    <li><a class="item-menu" href="">Conheça o Will</a></li>
+                    <li><a class="item-menu" href="">Conheça o Chris</a></li>
+                    <li><a class="item-menu" href="">Cadastro</a></li>
+                    <li><a class="item-menu" href="">Login</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <!-- Conteúdo principal da página -->
     <main>
         <section class="container-main">
-            <div class="imagem-will">
-                <img class="imagem-will" src="assents/will-index.png">
+            <div class="carrosel">
+                <div class="caixa__card img1">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/will-carrosel1.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img2">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/will-carrosel2.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img3">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/will-carrosel3.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img4">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/will-carrossel4.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img5">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/chris-carrossel1.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img6">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/chris-carrossel2.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img7">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/chris-carrossel3.jpg">
+                    </div>
+                </div>
+                <div class="caixa__card img8">
+                    <div class="estilizacao-img">
+                        <img class="estilizacao-img" src="./assents/carrossel-index/chris-carrossel4.jpg">
+                    </div>
+                </div>
             </div>
-            <div class="imagem-chris">
-                <img class="imagem-chris" src="assents/chris-index.png">
-            </div>
-            <div class="introducao">
-                <h4 class="titulo-introducao">Um maluco no pedaco<br>‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ x<br>Todo mundo
-                    odeia o Chris</h4>
-                <p>
-                    The Fresh Prince of Bel-Air e Everybody Hates Chris são duas séries americanas
-                    que rapidamente se popularizaram não somente nos Estadudos Unidos, como também mundialmente.<br><br>
-                    Mesmo sendo retradas em decadas diferentes (uma nos anos 90 e outra nos anos 2000), ambas conseguem
-                    se aproximar do público e cativá-lo de maneira similiar, gerando muitas vezes uma identificação dos
-                    mesmo com os personagens apresentados (principalmente com os protagonistas).
-                    <br><br>
-                    A qualidade e a personalidade demonstrada em The Fresh Prince of Bel-Air e em Everybody Hates Chris
-                    foi tão marcante que resultou às séries diversos pémios como o Young Artist Awards e Imagine Award
-                    (faturadas por The Fresh Prince of Bel-Air) e as indicações ao Globo de Ouro e ao Emmy Awards em 3
-                    categorias diferentes (feito alcaçado por e Everybody Hates Chris).
-                </p>
+
+            <!-- Introdução do tema do projeto -->
+            <div class="container-introducao">
+                <div class="introducao">
+                    <h4 class="titulo-introducao">Um maluco no pedaco<br>‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ x<br>Todo mundo
+                        odeia o Chris</h4>
+                    <p>
+                        The Fresh Prince of Bel-Air e Everybody Hates Chris são duas séries americanas
+                        que rapidamente se popularizaram não somente nos Estadudos Unidos, como também
+                        mundialmente.<br><br>
+                        Mesmo sendo retradas em decadas diferentes (uma nos anos 90 e outra nos anos 2000), ambas
+                        conseguem
+                        se aproximar do público e cativá-lo de maneira similiar, gerando muitas vezes uma identificação
+                        dos
+                        mesmo com os personagens apresentados (principalmente com os protagonistas).
+                        <br><br>
+                        A qualidade e a personalidade demonstrada em The Fresh Prince of Bel-Air e em Everybody Hates
+                        Chris
+                        foi tão marcante que resultou às séries diversos pémios como o Young Artist Awards e Imagine
+                        Award
+                        (faturadas por The Fresh Prince of Bel-Air) e as indicações ao Globo de Ouro e ao Emmy Awards em
+                        3
+                        categorias diferentes (feito alcaçado por e Everybody Hates Chris).
+                    </p>
+                </div>
             </div>
         </section>
-        <section container-brasil>
-            <div>
-                <!-- <img src="assents/Pelé-and-Will-index.png"> -->
-            </div>
+
+        <!-- Parte sobre impacto de ambas no Brasil  -->
+        <section class="container-brasil">
             <div class="resumo-brasil">
                 <h4 class="titulo-resumo">No Brasil</h4>
                 <p>
@@ -88,6 +134,139 @@
                 </p>
             </div>
         </section>
+
+        <!-- Temas abordados pelas séries -->
+        <section class="final-index">
+            <div class="temas-series">
+                <h4 class="titulo-final">Temas abordados nas series</h4>
+                <p class="final txt1">
+                    Todo Mundo Odeia o Chris e Um Maluco no Pedaço apesar de serem voltadas para o genero de humor,
+                    acabam retratando também diversos problemas enfretados pela sociedade, principalmente problemas
+                    enfrentados pelas classes mais pobres que é de onde vem os seus protagonistas. Alguns do tópicos que
+                    são retratados em diversos episódios são:
+                </p>
+
+                <!-- Desigualdade Social -->
+                <h2 class="subtitulo ds">
+                    : Desigualdade Social :
+                </h2>
+                <p class="final txt2">
+                    Em muitos episódios são mostrados fortes contrastes sociais: pessoas mais ricas possuem privilégios
+                    na sociedade, enquanto as mais pobres não têm tantas oportunidades.<br><br>
+                    Mas sem dúvidas a maior representação desse fator está em Um maluco no Pedaço,
+                    nela vemos Will lidando com a familia rica que na primeira temporada não esta acostumada com o jeito
+                    de ser de Will e ainda na primeira temporada a série nos apresenta o ínicio da vida academica de
+                    Will em uma escola particular e nesse periodo em questão o próprio protagonista percebe a diferença
+                    entre o ambiente que ele veio e o que ele está insirido naquele momento, sofrendo diversas formas de
+                    preconceito por ser quem é e vir de onde veio.
+                </p>
+                <div class="topicos-img1">
+                    <img class="topicos-img1" src="./assents/img-index/will-index.jpg">
+                </div>
+
+                <!-- Violencia Policial -->
+                <h2 class="subtitulo vp">
+                    : Violencia policial :
+                </h2>
+                <p class="final txt3">
+                    Em ambas as séries são retradas de forma clara a relação entre a policia e os menos privilegiados e
+                    a diferença de tratamento dos policiais de acordo com a classe na qual os personagens pertencem. Em
+                    Um Maluco no pedaço existe um episódio em questão que faz uma crítica de maneira clara, nela o
+                    personagem Jazz (amigo de Will) esta num tribunal e se recusa a abaixar as mãos e quando perguntam o
+                    por que de tal ato, sua resposta é curta, mas objetiva :<br><br>
+                    "Nem pensar, o cara (se referindo ao policial que estava ao seu lado) ta armado. Daqui a pouco ele
+                    da seis tiros de advertência nas minhas costas"<br><br>
+                    Após isso Jazz começa a abaixar as mãos devagar enquanto narra para o policial o que esta fazendo.
+                </p>
+                <div class="topicos-img2">
+                    <img class="topicos-img2" src="./assents/img-index/will-preso-index.jpg">
+                </div>
+
+                <!-- Racismo -->
+                <h2 class="subtitulo racismo">
+                    : Racismo :
+                </h2>
+                <p class="final txt4">
+                    O racismo se demonstra presente frequentemente em Todo Mundo Odeia o Chris e é abordado em alguns
+                    episódio de um maluco no pedaço também.<br><br>
+                    Na série do Chris esse tema é retratado em quase todos os episódios, atraves de piadas, flashbacks,
+                    ou até mesmo no decorrer do dia a dia do protagonista.<br>
+                    A série busca deixar o tema exposto de uma maneira explicita para que o telespectador consiga captar
+                    as mensagens que estão senod transmitidas e também obtenha um maior conhecimento do tema tratado,
+                    obtendo assim por consequência uma evolução em sua forma de analisar o que tudo ao seu redor e
+                    consiga mudar muitas vezes a sua forma de pensar.<br><br>
+                    Para evidenciar melhor esse tópico, Todo Mundo Odeia o Chris conta com 3 personagens que
+                    constantemente fazem piadas e utilizam de frases e termos racistas durante suas aparições nos
+                    episódios, os personagens em questão são: Caruso, Senhorita Morelo e o Senhor Thurman.
+                </p>
+                <div class="topicos-img3">
+                    <img class="topicos-img3" src="./assents/img-index/chris-figurantes-index.png">
+                </div>
+
+                <!-- Bullying -->
+                <h2 class="subtitulo bullying">
+                    : Bullying :
+                </h2>
+                <p class="final txt5">
+                    Há uma certa diferença na forma que esse tópico é apresentado em ambas as séries, enquanto em Um
+                    Maluco no Pedaço é apresentada em poucos episódios e de forma consideravelmente mais "leve" em Todo
+                    Mundo Odeia o Chris esse tema é ressaltado em quase todos os episódios, juntamente com o racismo e
+                    isso se deve ao fato que ambos andavam lado a lado e estavam entrelassados na vida de Chris.<br><br>
+                    Mantendo o foco em Todo Mundo Odeia o Chris, na série acompanhamos as constantes humilhações e
+                    opressões sofridas por Chris desde o ensino fundamental até o fim do ensino médio. As surras,
+                    xingamentos, preconceito e discriminação eram constantes no dia a dia do protagonista e diversas das
+                    cenas que retratam tais situações, mesmo que sejam retradas com um tom de humor, geram de maneira
+                    natural um tom de injuria no público que acompanha a série.<br><br>
+                    Já em Um Maluco no Pedaço o personagem que acaba sofrendo diversas vezes é Carlton (primo de Will),
+                    que pelo seu jeito de ser muitas vezes acaba sendo alvo de brincadeiras maldosas, discriminação e
+                    humihações.<br><br>
+                    No desenrolar de amabas as séries nota-se como o bullying influenciou na evolução tanto de Chris
+                    quanto o de Carlton, demonstrando para o público que assiste como a maneira de pensar e a maturidade
+                    de ambos se molda e se desenvolve, trazendo uma maior admiração do público com os personagens em
+                    questão.
+                </p>
+                <div class="topicos-img4">
+                    <img class="topicos-img4" src="./assents/img-index/chris-bullying-index.jpg">
+                </div>
+                <div class="topicos-img5">
+                    <img class="topicos-img5" src="./assents/img-index/Carlton-bullying-index.jpg">
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer da pág -->
+        <footer>
+            <div class="container-footer">
+                <div class="box-superior">
+                    <div class="conteudo-footer">
+                        <div class="mini-box">
+                        <b>
+                            <h4>Fale comigo</h4>
+                        </b>
+                        <div class="email">
+                            <p>
+                                calebe.reboucas@sptech.school <span class="separacao">|</span>
+                            </p>
+                        </div>
+                    </div>
+                    </div>
+                        <div class="icon">
+                            <a href="https://github.com/Calebe-Marques">
+                                <img src="./assents/svg/icon-github.png" alt="2" width="40px">
+                            </a>
+                        </div>
+                        <div class="icon">
+                            <a href="https://www.linkedin.com/in/calebe-marques-rebou%C3%A7as-20372922a/">
+                                <img src="./assents/svg/icon-linkedin.png" alt="2" width="40px">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box-inferior">
+                    <h4>© 2022 SPTECH | Feito por um aluno SPTECH com amor</h4>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
