estilização do login e do cadastro finalizadas

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
                 <ul>
                     <li><a class="item-menu" href="conheça-will.html">Conheça o Will</a></li>
                     <li><a class="item-menu" href="">Conheça o Chris</a></li>
-                    <li><a class="item-menu" href="">Cadastro</a></li>
-                    <li><a class="item-menu" href="">Login</a></li>
+                    <li><a class="item-menu" href="cadastro.html">Cadastro</a></li>
+                    <li><a class="item-menu" href="login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
