pag chris finalizada

--- a/public/conheça-chris.html
+++ b/public/conheça-chris.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/conheca-will.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/conheca-chris.css">
     <link rel="stylesheet" href="css/header.css">
-    <title>SWRC | Conheça o Will</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>SWRC | Conheça o Chris</title>
 </head>
 
 <body style="background-color: #ADCD12;">
@@ -32,7 +32,7 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="conheça-chris.html">Conheça o Chris</a></li>
+                <li><a href="conheça-will.html">Conheça o will</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
@@ -42,20 +42,20 @@
     <!-- Conteúdo principal da página -->
     <main>
         <section class="section-header">
-            <div class="img-will">
-                <img class="img-will" src="./assents/pag-will/will-section-header.png">
+            <div class="img-chris">
+                <img class="img-chris" src="./assents/pag-chris/chris-section-header.png">
             </div>
         </section>
 
         <!-- Inicio dos conteudos da página -->
-        <section class="container-will">
+        <section class="container-chris">
             <div class="box-principal">
                 <div class="box-foto">
                     <div class="onda">
                         <img class="onda" src="./assents/svg/Onda_1.svg">
                     </div>
-                    <div class="img-will-c1">
-                        <img class="img-will-c1" src="./assents/pag-will/img-descricao-will.png">
+                    <div class="img-chris-c1">
+                        <img class="img-chris-c1" src="./assents/pag-chris/img-descricao-chris.png">
                     </div>
                 </div>
 
@@ -63,13 +63,15 @@
                 <div class="box-rigth">
                     <div class="texto1">
                         <h2>
-                            <b>WILL SMITH</b>
+                            <b>CHRIS ROCK</b>
                         </h2>
                         <p>
-                            Will é um jovem de origem humildade que se muda para um luxuoso bairro na Califónia após
-                            arrumar confusão com pessoas perigosas de seu bairro, na Filadélfia.<br><br>
-                            Contudo, por ser um garoto humilde e não ligar para os estudos, Will vive se comportando de
-                            maneira inadequada e provocando trapalhadas aos seus tios e primos na mansão.
+                            Chris, carinha que mora logo ali ou suco de fruta é um jovem que se muda para um luxuoso
+                            bairro na Califónia após mora na periferia americana, mais especificamente no bairro do
+                            Brooklyn.<br><br>
+                            Chris é mais um jovem como todos os outros vindo da periferia, entretando, Chris acaba tendo
+                            uma adolescencia repleta de opressões, racismo e violencia e busca superar tudo isso atraves
+                            do humor.
                         </p>
                     </div>
                 </div>
@@ -82,55 +84,55 @@
             <div class="conteudo-left">
                 <h2 class="subtitulo-left">Sobre a serie</h2>
                 <p class="curiosidades">
-                    <b>1°</b> Você com certeza deve lembrar do amigo de Will, Jazz. Pois é, lembra que ele foi jogado
-                    para a fora da casa dos tios do amigo diversas vezes, não é? Pois bem, ao todo foram 105 vezes
-                    durante toda a série. E para chocar ainda mais você: a cena dele sendo jogado foi gravada apenas UMA
-                    vez! Ou seja, ela foi repetida outras 104 vezes durante a série. Sempre tomando cuidado para que
-                    Jazz estivesse sempre com a mesma camisa. <br><br><br>
+                    <b>1°</b> Os nomes das duas escolas em que o Chris estudou no seriado são uma homenagem ao “Poderoso
+                    Chefão”. As instituições são chamadas “Corleone” e “Tattaglia”, ambos são sobrenomes de famílias
+                    mafiosas do filme. <br><br><br>
 
-                    <b>2°</b> A série sofreu um cancelamento em 1994, quando Will volta para a Filadélfia. No entanto,
-                    após uma enxurrada de cartas dos fãs solicitando o retorno, enviadas tanto para a emissora quanto
-                    para Will, a NBC decidiu renová-la por mais duas temporadas. <br><br><br>
+                    <b>2°</b> O nome do seriado “Todo Mundo Odeia o Chris” (em inglês, “Everybody Hates Chris”) é um
+                    trocadilho ao título de outra série de comédia americana “Everybody loves Raymond”, que em livre
+                    tradução é “Todo Mundo Ama o Raymond”. <br><br><br>
 
-                    <b>3°</b> Somente 4 personagens estão presentes em todos os episódios da série.<br>
-                    São eles: Will Smith, o protagonista da série, Alfonso Ribeiro, que interpreta Carlton Banks, James
-                    Avery como Tio Phil e Karyn Parsons, como Hilary. <br><br><br>
+                    <b>3°</b> O personagem tio Ryan, que vive pedindo dinheiro emprestado ao Julius (pai do Chris) para
+                    abrir um negócio, é interpretado por Tony Rock, irmão do comediante na vida real. <br><br><br>
 
-                    <b>4°</b> A famosa mansão branca da família Banks que aparece na abertura, não fica localizada no
-                    luxuoso bairro de Bel-Air, em Los Angeles, mas em Brentwood na Califórnia. <br><br><br>
+                    <b>4°</b> Na realidade, o período de adolescência do Chris aconteceu entre os anos 1978 e 1984, mas
+                    o comediante achou melhor retratar a história como se tivesse ocorrido entre 1982 e 1987, já que
+                    considerava as referências culturais da década de 80 mais marcantes e interessantes. <br><br><br>
 
-                    <b>5°</b> Existia um diário no set de filmagem, mantido pelo elenco e equipe de produção, em que
-                    escreviam poemas bobos ou frases como “James está me dando nos nervos”. Segundo Karyn Parsons
-                    (Hilary), ela levou o caderno para casa e o utiliza como memória de James Avery (Tio Phil), que
-                    interpretou o pai de sua personagem.
+                    <b>5°</b> O verdadeiro nome da mãe do Chris é Rosalie, e não Rochelle. Além disso, diferentemente da
+                    personagem, ela trabalhava como professora e assistente social e não mudava de emprego com
+                    frequência conforme é apresentado na série. <br><br><br>
+
+                    <b>Extra:</b>O pai do Chris, Julius Rock realmente era motorista de caminhão e entregador de jornais
+                    como é demonstrado no programa. Mas infelizmente ele veio a falecer em 1988, com apenas 56 anos,
+                    após uma cirurgia de úlcera. Essa foi uma das razões do seriado encerrar a representação da vida do
+                    comediante no ano de 1987.
                 </p>
             </div>
             <div class="conteudo-right">
-                <h2 class="subtitulo-right">Sobre o Will</h2>
+                <h2 class="subtitulo-right">Sobre o Chris</h2>
                 <p class="curiosidades-right">
-                    <b>1°</b> A ideia do nome do personagem ser "Will Smith" veio de uma conversa entre Will Smith e
-                    Alfonso Ribeiro.
-                    Durante a criação do show, Will e Alfonso Ribeiro, que vive o Carlton, estavam escolhendo os seus
-                    nomes. Foi quando Alfonso disse para Will escolher um que gostaria que as pessoas o chamasse em
-                    público pelo resto de sua vida. Foi quando Smith escolheu ser chamado por seu próprio
-                    nome!<br><br><br>
+                    <b>1°</b> O ator realmente foi estudar em escolas que na época eram conhecidas como “escolas de
+                    brancos” em bairros vizinhos. Por causa disso, sofreu bastante bullying e agressões físicas. Em
+                    certa ocasião, foi necessário tirá-lo do colégio porque os ataques racistas foram tão intensos que
+                    colocavam em risco a vida de Chris.<br><br><br>
 
-                    <b>2°</b> Will e Jada (sua esposa) se conheceram em 1994 no set de gravações quando Jada fez o teste
-                    para o papel de Lisa (Nia Long), namorada de Will na série, mas não foi escolhida. Eles se casaram
-                    em 1997 e tiveram dois filhos: Jaden Smith e Willow Smith. <br><br><br>
+                    <b>2°</b> O narrador do seriado contribui bastante para o humor do programa, sempre fazendo
+                    comentários sarcásticos sobre os acontecimentos. Em inglês, a série é narrada pelo próprio Chris
+                    Rock. <br><br><br>
 
-                    <b>3°</b>Will Smith era um rapper conhecido como Fresh Prince e a série foi feita especialmente para
-                    ele. No entanto, o motivo principal de ter aceitado era seus problemas com a Receita Federal dos
-                    Estados Unidos, que chegou a confiscar 70% do salário recebido por Will para saldar impostos
-                    atrasados. <br><br><br>
+                    <b>3°</b>O ator precisou trabalhar duro para ser comediante Após a morte de seu pai, Chris Rock
+                    precisou trabalhar em várias redes de fast-food para poder sustentar seu sonho de ser comediante. Na
+                    mesma época, ele saiu do ensino médio por sofrer bullying em excesso, e passava seus dias tentando
+                    ganhar dinheiro, enquanto preparava apresentações de stand-up. <br><br><br>
 
-                    <b>4°</b> A música de abertura da série é cantada por Will Smith, mas um fato que poucos conhecem é
-                    que a música também foi composta por ele. Segundo DJ Jazzy Jeff (que interpretou o personagem Jazz)
-                    que formava uma dupla de Hip-Hop com Will Smith na época, o DJ afirmou que após entender o conceito
-                    da série, Will escreveu a música e em 15 minutos ela ja estava gravada.<br><br><br>
+                    <b>4°</b>Em uma das apresentações stand-up de Chris, o astro Eddie Murphy estava na plateia, e ficou
+                    impressionado com o talento do jovem. Por conta disso, os dois viraram amigos, e Eddie colocou o
+                    comediante no elenco de Um Tira da Pesada 2, onde contracenaram juntos.<br><br><br>
 
-                    <b>5°</b> Will e Jazz eram uma dupla de hip-hop fora das telas e foi durante uma turnê dos dois que
-                    um dançarino substituto criou o cumprimento dos dois, adicionado ao programa posteriormente.
+                    <b>5°</b> Chris Rock aparece em um dos episódios Além de ser responsável pela existência da série,
+                    Chris Rock também atua em um dos episódios, interpretando o Sr. Abbot, conselheiro escolar que ajuda
+                    o protagonista com dicas duvidáveis.
                 </p>
             </div>
         </section>
@@ -150,25 +152,23 @@
                 <div class="box-carrossel">
                     <div class="elementos-carrossel">
 
-                        <img src="./assents/pag-will/tio-phill-carrossel.png" class="item item-atual">
 
-
-                        <img src="./assents/pag-will/tia-vivian-carrossel.png" class="item item-atual">
-
-
-
-                        <img src="./assents/pag-will/ashley-carrossel.png" class="item item-atual">
-
-
-                        <img src="./assents/pag-will/hilary-carrossel.png" class="item item-atual">
+                        <img src="./assents/pag-chris/julius-carrossel.png" class="item item-atual">
 
 
 
-                        <img src="./assents/pag-will/jeffrey-carrossel.png" class="item item-atual">
+                        <img src="./assents/pag-chris/rochelle-carrossel.png" class="item item-atual">
+
+
+                        <img src="./assents/pag-chris/tonya-carrossel.png" class="item item-atual">
 
 
 
-                        <img src="./assents/pag-will/carlton-carrossel.png" class="item item-atual">
+                        <img src="./assents/pag-chris/drew-carrossel.png" class="item item-atual">
+
+
+
+                        <img src="./assents/pag-chris/greg-carrossel.png" class="item item-atual">
 
 
                     </div>
@@ -184,7 +184,7 @@
                 <div class="conteudo-footer">
                     <div class="mini-box">
                         <b>
-                            <h4>Gostou do Will e familia?</h4>
+                            <h4>Gostou do Chris e familia?</h4>
                         </b>
                         <p>
                             Clique no botão e cadastre-se para ter acesso a conteúdos exclusivos: <button
@@ -203,8 +203,9 @@
             <h4>© 2022 SPTECH | Feito por um aluno SPTECH com amor</h4>
         </div>
     </footer>
+
 </body>
 
 </html>
-<script src="./js/pag-will.js"></script>
 <script src="./js/header.js"></script>
+<script src="./js/pag-will.js"></script>
