--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <nav class="menu">
                 <ul>
                     <li><a class="item-menu" href="conheça-will.html">Conheça o Will</a></li>
-                    <li><a class="item-menu" href="">Conheça o Chris</a></li>
+                    <li><a class="item-menu" href="conheça-chris.html">Conheça o Chris</a></li>
                     <li><a class="item-menu" href="cadastro.html">Cadastro</a></li>
                     <li><a class="item-menu" href="login.html">Login</a></li>
                 </ul>
