--- a/public/login.html
+++ b/public/login.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="conheça-will.html">Conheça o Will</a></li>
-                <li><a href="#">Conheça o Chris</a></li>
+                <li><a href="conheça-chris.html">Conheça o Chris</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
